		       an even number means stable while odd marks 
		       development releases
  Z = revision       - small changes to major.minor version (optional)
		
  devT = dev-release - development releases leading to the next stable
		       version

-----------------------------------------------------------------------

Last officially released version is -*> v2.0.3 *-

31102001 (v2.1dev4)
	- added: eiam - 'cs-option' commmand; although explicit use 
		 of cmd-line options as iactive-mod commands (like 
                 "-i:file.wav") is still supported, "cs-option 
                 -i:file.wav" is now the preferred syntax
	- removed: ecasound FAQ file - it only contains about 	 
		   a pageful of useful text - I moved that
		   precious piece of content to the user's 
		   guide :)
	- changed: uses of '-i' an '-o' replaced with 'ai-add' 
		   and 'ao-add' in ECI documentation and 
		   code examples in 'ecasound/examples'
	- changed: user's and programmer's guides updated
	- changed: bug-alert; major rewrite of ecasound's 
                   internal object factory code
	- changed: eiam - output of aio-register, cop-register,
		   ladspa-register and preset-register commands
	- fixed: multitrack mode was not properly detected if 
		 buffering mode was selected explicitly (-B)
	- fixed: eiam - minor 'cs-edit' bugs fixed
	- fixed: 'make install' failed if srcdir != objdir
	- fixed: didn't work with ALSA +0.9b8 CVS-tree
	- fixed: additional noises when mixing mono and stereo
		 streams in ecasound chains
	- fixed: better handling of situations where ecasound
		 can't execute ogg123 for ogg input
21102001 (v2.1dev3)
	- note: major changes to effect preset system which 
		break some old preset definitions
	- edi-entries: edi-3
	- added: ecasound-config - --ldflags and --prefix
	- added: engine profiling info (printed to stderr)
	- added: -z:multitrack, -z:nomultitrack for forced enabling
		 and disabling of multitrack-mode